[package]
name = "defaultdict"
version = "0.12.0"
description = "A hashmap implementation that mirrors the python defaultdict."
edition = "2021"
authors = ["Mitchell Berendhuysen"]
license = "MIT"

documentation = "https://docs.rs/defaultdict"


repository = "https://github.com/MitchellBerend/defaultdict"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
